test/cases/function_redeclaration.zig
// dummy comment
fn entry() void {}
fn entry() void {}

// error
//
// :2:4: error: duplicate struct member name 'entry'
// :3:4: note: duplicate name here
// :2:1: note: struct declared here
